[gd_scene load_steps=5 format=2]

[ext_resource path="res://Source/UI/MenuLayer.gd" type="Script" id=1]
[ext_resource path="res://asset/textures/message.png" type="Texture" id=2]
[ext_resource path="res://Source/UI/Fonts/FlappyFont48.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Player screen"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("StartMenu/StartMassage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartMenu" type="Control" parent="."]
editor/display_folded = true
margin_right = 460.0
margin_bottom = 854.0

[node name="StartMassage" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -337.0
margin_right = 138.0
margin_bottom = 63.0
texture = ExtResource( 2 )

[node name="GameOver" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -427.0
margin_right = 230.0
margin_bottom = 427.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 220.0
margin_right = 130.0
margin_bottom = 413.0
custom_constants/separation = 20

[node name="Score_lable" type="Label" parent="GameOver/VBoxContainer"]
margin_right = 250.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "Score: 0"
align = 1

[node name="HighScore_lable" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 69.0
margin_right = 250.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "Best: 0"
align = 1

[node name="Restart" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 138.0
margin_right = 250.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.968627, 0.0470588, 0.0470588, 1 )
custom_colors/font_color_hover = Color( 0.945098, 0.976471, 0.0196078, 1 )
custom_colors/font_color_pressed = Color( 0.478431, 0.909804, 0.0431373, 1 )
text = "Restart"

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Player screen" = SubResource( 1 )
[connection signal="pressed" from="GameOver/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
